[project]
name = "LQTpy"
version = "0.1.0"
description = "Lesion Quantification Toolkit implementation in python"
authors = [
  { name = "Rohan Jepegnanam", email = "rohantjepegnanam@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "nilearn",
  "nibabel",
  "pandas",
  "numpy",
  "matplotlib",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["LQTpy*"]

[tool.setuptools.package-data]
"LQTpy.resources" = ["*.nii.gz"]
